--- a/index.html
+++ b/index.html
@@ -133,18 +133,15 @@
     <section id="projects" class="py-24 px-6 bg-slate-900/40">
         <div class="container mx-auto">
             <div class="mb-12">
-                <h2 class="text-3xl font-bold mb-2 text-left uppercase tracking-widest">
+                <h2 class="text-3xl font-bold text-left uppercase tracking-widest">
                     Project Warehouse
                 </h2>
-                <p class="text-slate-500 text-xs uppercase tracking-widest opacity-80">
-                    Click the desired card to reveal more details
-                </p>
             </div>
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
 
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="project-card-container" onclick="flipCard(this)">
                     <div class="project-card-inner">
-                        <div class="card-front glass-card p-8 flex flex-col justify-between">
+                        <div class="card-front glass-card p-8 flex flex-col justify-between relative overflow-hidden">
                             <div>
                                 <div class="flex justify-between items-start mb-6">
                                     <span class="text-[10px] font-bold text-blue-400 uppercase tracking-widest">Computer Vision / ANN</span>
@@ -153,7 +150,13 @@
                                 <h3 class="text-2xl font-bold mb-4">TarangAI</h3>
                                 <p class="text-slate-400 text-sm leading-relaxed text-justify">AI-powered system for identifying Indian classical dance forms. Uses pose estimation and movement analysis to study patterns, demonstrating ML in human motion and cultural art analysis.</p>
                             </div>
-                            <div class="flex flex-wrap gap-2"><span class="text-[10px] bg-slate-800 px-2 py-1 rounded">MediaPipe</span><span class="text-[10px] bg-slate-800 px-2 py-1 rounded">OpenCV</span></div>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">MediaPipe</span>
+                                <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">OpenCV</span>
+                            </div>
+                            <div class="absolute bottom-5 right-5 text-xs text-blue-400 font-bold uppercase tracking-wider opacity-90 animate-pulse italic pointer-events-none">
+                                Click me ✨
+                            </div>
                         </div>
                         <div class="card-back p-8 flex flex-col justify-center border-blue-500/50">
                             <h4 class="text-blue-400 font-bold mb-3 uppercase text-[10px] tracking-widest"><i class="fas fa-microchip mr-2"></i>What I worked on</h4>
@@ -174,7 +177,7 @@
 
                 <div class="project-card-container" onclick="flipCard(this)">
                     <div class="project-card-inner">
-                        <div class="card-front glass-card p-8 border-t-2 border-emerald-500/30 flex flex-col justify-between">
+                        <div class="card-front glass-card p-8 border-t-2 border-emerald-500/30 flex flex-col justify-between relative overflow-hidden">
                             <div>
                                 <div class="flex justify-between items-start mb-6">
                                     <span class="text-[10px] font-bold text-emerald-400 uppercase tracking-widest">ANN / Data Analysis</span>
@@ -183,7 +186,13 @@
                                 <h3 class="text-2xl font-bold mb-4">Crop Prediction</h3>
                                 <p class="text-slate-400 text-sm leading-relaxed text-justify">A machine learning project that uses ANN to predict agricultural crop yields. It analyzes historical and environmental data to identify patterns affecting production.</p>
                             </div>
-                            <div class="flex flex-wrap gap-2"><span class="text-[10px] bg-slate-800 px-2 py-1 rounded">TensorFlow</span><span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Keras</span></div>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">TensorFlow</span>
+                                <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Keras</span>
+                            </div>
+                            <div class="absolute bottom-5 right-5 text-xs text-emerald-400 font-bold uppercase tracking-wider opacity-90 animate-pulse italic pointer-events-none">
+                                Click me ✨
+                            </div>
                         </div>
                         <div class="card-back p-8 flex flex-col justify-center border-emerald-500/50">
                             <h4 class="text-emerald-400 font-bold mb-3 uppercase text-[10px] tracking-widest"><i class="fas fa-microchip mr-2"></i>What I worked on</h4>
@@ -204,7 +213,7 @@
 
                 <div class="project-card-container" onclick="flipCard(this)">
                     <div class="project-card-inner">
-                        <div class="card-front glass-card p-8 flex flex-col justify-between">
+                        <div class="card-front glass-card p-8 flex flex-col justify-between relative overflow-hidden">
                             <div>
                                 <div class="flex justify-between items-start mb-6">
                                     <span class="text-[10px] font-bold text-purple-400 uppercase tracking-widest">NLP / Text Analysis</span>
@@ -213,7 +222,13 @@
                                 <h3 class="text-2xl font-bold mb-4">SentimentR</h3>
                                 <p class="text-slate-400 text-sm leading-relaxed text-justify">A machine learning project for analyzing and classifying text sentiment polarity using NLP techniques, demonstrating practical applications in opinion mining.</p>
                             </div>
-                            <div class="flex flex-wrap gap-2"><span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Scikit-learn</span><span class="text-[10px] bg-slate-800 px-2 py-1 rounded">NLTK</span></div>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Scikit-learn</span>
+                                <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">NLTK</span>
+                            </div>
+                            <div class="absolute bottom-5 right-5 text-xs text-purple-400 font-bold uppercase tracking-wider opacity-90 animate-pulse italic pointer-events-none">
+                                Click me ✨
+                            </div>
                         </div>
                         <div class="card-back p-8 flex flex-col justify-center border-purple-500/50">
                             <h4 class="text-purple-400 font-bold mb-3 uppercase text-[10px] tracking-widest"><i class="fas fa-microchip mr-2"></i>What I worked on</h4>
@@ -234,7 +249,7 @@
 
                 <div class="project-card-container" onclick="flipCard(this)">
                     <div class="project-card-inner">
-                        <div class="card-front glass-card p-8 flex flex-col justify-between">
+                        <div class="card-front glass-card p-8 flex flex-col justify-between relative overflow-hidden">
                             <div>
                                 <div class="flex justify-between items-start mb-6">
                                     <span class="text-[10px] font-bold text-yellow-400 uppercase tracking-widest">Financial ML / Time Series</span>
@@ -243,7 +258,13 @@
                                 <h3 class="text-2xl font-bold mb-4">MarketPulse AI</h3>
                                 <p class="text-slate-400 text-sm leading-relaxed text-justify">Predicting stock market trends by processing historical financial data to identify patterns and price movements using quantitative time-series models.</p>
                             </div>
-                            <div class="flex flex-wrap gap-2"><span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Scikit-Learn</span><span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Pandas</span></div>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Scikit-Learn</span>
+                                <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Pandas</span>
+                            </div>
+                            <div class="absolute bottom-5 right-5 text-xs text-yellow-400 font-bold uppercase tracking-wider opacity-90 animate-pulse italic pointer-events-none">
+                                Click me ✨
+                            </div>
                         </div>
                         <div class="card-back p-8 flex flex-col justify-center border-yellow-500/50">
                             <h4 class="text-yellow-400 font-bold mb-3 uppercase text-[10px] tracking-widest"><i class="fas fa-microchip mr-2"></i>What I worked on</h4>
@@ -264,7 +285,7 @@
 
                 <div class="project-card-container" onclick="flipCard(this)">
                     <div class="project-card-inner">
-                        <div class="card-front glass-card p-8 border-t-2 border-red-500/30 flex flex-col justify-between">
+                        <div class="card-front glass-card p-8 border-t-2 border-red-500/30 flex flex-col justify-between relative overflow-hidden">
                             <div>
                                 <div class="flex justify-between items-start mb-6">
                                     <span class="text-[10px] font-bold text-red-400 uppercase tracking-widest">NLP / Recommendation</span>
@@ -273,7 +294,13 @@
                                 <h3 class="text-2xl font-bold mb-4">Spoofify</h3>
                                 <p class="text-slate-400 text-sm leading-relaxed text-justify">A lyric-based recommendation system using TF-IDF and cosine similarity to suggest tracks based on emotional and sentiment detection within song content.</p>
                             </div>
-                            <div class="flex flex-wrap gap-2"><span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Scikit-learn</span><span class="text-[10px] bg-slate-800 px-2 py-1 rounded">NLTK</span></div>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Scikit-learn</span>
+                                <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">NLTK</span>
+                            </div>
+                            <div class="absolute bottom-5 right-5 text-xs text-red-400 font-bold uppercase tracking-wider opacity-90 animate-pulse italic pointer-events-none">
+                                Click me ✨
+                            </div>
                         </div>
                         <div class="card-back p-8 flex flex-col justify-center border-red-500/50">
                             <h4 class="text-red-400 font-bold mb-3 uppercase text-[10px] tracking-widest"><i class="fas fa-microchip mr-2"></i>What i worked on</h4>
@@ -294,7 +321,7 @@
 
                 <div class="project-card-container" onclick="flipCard(this)">
                     <div class="project-card-inner">
-                        <div class="card-front glass-card p-8 border-t-2 border-blue-500/30 flex flex-col justify-between">
+                        <div class="card-front glass-card p-8 border-t-2 border-blue-500/30 flex flex-col justify-between relative overflow-hidden">
                             <div>
                                 <div class="flex justify-between items-start mb-6">
                                     <span class="text-[10px] font-bold text-blue-400 uppercase tracking-widest">Open for Collaboration</span>
@@ -303,7 +330,13 @@
                                 <h3 class="text-2xl font-bold mb-4">Let’s Build Something</h3>
                                 <p class="text-slate-400 text-sm leading-relaxed text-justify">Open to collaborating on machine learning and AI projects. Interested in real-world problems, research ideas, and innovative applications. Always excited to learn, build, and grow together.</p>
                             </div>
-                            <div class="flex flex-wrap gap-2"><span class="text-[10px] bg-slate-800 px-2 py-1 rounded">AIML</span><span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Collaboration</span></div>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">AIML</span>
+                                <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Collaboration</span>
+                            </div>
+                            <div class="absolute bottom-5 right-5 text-xs text-blue-500 font-bold uppercase tracking-wider opacity-90 animate-pulse italic pointer-events-none">
+                                Click me ✨
+                            </div>
                         </div>
                         <div class="card-back p-8 flex flex-col justify-center border-blue-500/50">
                             <h4 class="text-blue-400 font-bold mb-3 uppercase text-[10px] tracking-widest"><i class="fas fa-project-diagram mr-2"></i>What we can build</h4>
@@ -321,7 +354,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
