--- a/index.html
+++ b/index.html
@@ -319,38 +319,27 @@
                 </div>
             </div>
 
-            <div class="project-card-container" onclick="flipCard(this)">
+            <div class="project-card-container redirect-card" onclick="window.open('https://github.com/DeadBoTt-exe?tab=repositories', '_blank')">
                 <div class="project-card-inner">
                     <div class="card-front glass-card p-8 border-t-2 border-blue-500/30 flex flex-col justify-between relative overflow-hidden group">
-                        <div>
-                            <div class="flex justify-between items-start mb-6">
-                                <span class="text-[10px] font-bold text-blue-400 uppercase tracking-widest">Open for Collaboration</span>
-                                <i class="fas fa-handshake text-blue-500 text-xl"></i>
+                        <div class="flex flex-col h-full justify-center items-center text-center space-y-6">
+                            <div class="p-5 bg-blue-500/10 rounded-full border border-blue-500/20 group-hover:scale-110 transition-transform duration-500">
+                                <i class="fas fa-folder-open text-4xl text-blue-500"></i>
                             </div>
-                            <h3 class="text-2xl font-bold mb-4">Let’s Build Something</h3>
-                            <p class="text-slate-400 text-sm leading-relaxed text-justify">Open to collaborating on machine learning and AI projects. Interested in real-world problems, research ideas, and innovative applications. Always excited to learn, build, and grow together.</p>
+
+                            <div>
+                                <h3 class="text-2xl font-bold mb-2">View All Projects</h3>
+                                <p class="text-slate-400 text-sm italic">Explore my complete repository warehouse on GitHub</p>
+                            </div>
+
+                            <div class="flex items-center gap-2 text-blue-400 font-bold tracking-widest text-[10px] uppercase group-hover:gap-4 transition-all">
+                                Visit GitHub <i class="fas fa-arrow-right"></i>
+                            </div>
                         </div>
-                        <div class="flex flex-wrap gap-2">
-                            <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">AIML</span>
-                            <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Collaboration</span>
-                        </div>
+
                         <div class="absolute bottom-5 right-5 opacity-0 group-hover:opacity-100 transition-all duration-300 transform translate-y-2 group-hover:translate-y-0">
                             <i class="fas fa-external-link-alt text-blue-500 text-lg"></i>
                         </div>
-                    </div>
-                    <div class="card-back p-8 flex flex-col justify-center border-blue-500/50">
-                        <h4 class="text-blue-400 font-bold mb-3 uppercase text-[10px] tracking-widest"><i class="fas fa-project-diagram mr-2"></i>What we can build</h4>
-                        <ul class="text-xs text-slate-300 space-y-2 mb-6 border-l border-slate-700 pl-4">
-                            <li class="flex gap-2"><span>•</span><span>End-to-end Machine Learning pipelines.</span></li>
-                            <li class="flex gap-2"><span>•</span><span>Computer Vision & Image Processing tools.</span></li>
-                            <li class="flex gap-2"><span>•</span><span>Custom Neural Network architectures.</span></li>
-                        </ul>
-                        <h4 class="text-blue-400 font-bold mb-3 uppercase text-[10px] tracking-widest"><i class="fas fa-users mr-2"></i>Preferred Areas</h4>
-                        <ul class="text-xs text-slate-300 space-y-2 mb-6 border-l border-slate-700 pl-4">
-                            <li class="flex gap-2"><span>•</span><span>Research-oriented AI applications.</span></li>
-                            <li class="flex gap-2"><span>•</span><span>Scalable data-driven solutions.</span></li>
-                        </ul>
-                        <span class="text-[10px] text-blue-500 font-bold uppercase tracking-widest italic animate-pulse text-center">Click to flip back</span>
                     </div>
                 </div>
             </div>
