--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="flex justify-center">
                 <div class="relative group">
                     <div class="absolute inset-0 bg-blue-500 blur-3xl opacity-20 group-hover:opacity-40 transition duration-700"></div>
-                    <img src="assets/img/image3.jpg" alt="Bhaskar Chari" class="relative w-72 h-72 md:w-96 md:h-96 object-cover rounded-3xl border border-white/10 shadow-2xl transition duration-500 group-hover:scale-[1.02]">
+                    <img src="assets/img/image2.jpg" alt="Bhaskar Chari" class="relative w-72 h-72 md:w-96 md:h-96 object-cover rounded-3xl border border-white/10 shadow-2xl transition duration-500 group-hover:scale-[1.02]">
                 </div>
             </div>
         </div>
@@ -95,12 +95,12 @@
                 </div>
             </div>
         </div>
-        </div>
+        
     </section>
 
     <section id="skills" class="py-24 px-6">
         <div class="container mx-auto">
-            <h2 class="text-3xl font-bold mb-12 text-left uppercase tracking-widest">Technical Armory</h2>
+            <h2 class="text-3xl font-bold mb-12 text-left uppercase tracking-widest">Skills and Tools</h2>
             <div class="flex flex-col gap-4">
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
                     <div class="glass-card p-5 rounded-2xl border-t-2 border-blue-500/50 flex flex-col items-start">
