--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <a href="#home" class="hover:text-blue-400 transition">Home</a>
                 <a href="#aboutme" class="hover:text-blue-400 transition">About</a>
                 <a href="#skills" class="hover:text-blue-400 transition">Skills</a>
+                <a href="#experience" class="hover:text-blue-400 transition">Experience</a>
                 <a href="#projects" class="hover:text-blue-400 transition">Projects</a>
                 <a href="#achievements" class="hover:text-blue-400 transition">Achievements</a>
                 <a href="#contact" class="hover:text-blue-400 transition">Contact</a>
@@ -124,6 +125,65 @@
                     <div class="glass-card p-6 rounded-2xl border-l-2 border-cyan-500/50">
                         <h4 class="text-cyan-400 font-bold uppercase text-[10px] tracking-widest mb-5 flex items-center gap-2"><i class="fas fa-microchip"></i> Core Concepts</h4>
                         <div class="flex flex-wrap gap-2"><span class="skill-chip">Machine Learning</span><span class="skill-chip">Neural Networks</span><span class="skill-chip">NLP</span><span class="skill-chip">Computer Vision</span><span class="skill-chip">Prompt Engineering</span><span class="skill-chip">GenAI</span><span class="skill-chip">OOP</span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="experience" class="py-24 px-6 bg-slate-900/20">
+        <div class="container mx-auto">
+            <div class="mb-12">
+                <h2 class="text-3xl font-bold mb-2 text-left uppercase tracking-widest">
+                    Professional Journey
+                </h2>
+                <p class="text-slate-500 text-xs uppercase tracking-widest opacity-80">
+                    Internships and National Achievements
+                </p>
+            </div>
+
+            <div class="max-w-4xl">
+                <div class="glass-card p-8 rounded-3xl relative overflow-hidden group">
+
+                    <div class="flex flex-col md:flex-row justify-between items-start mb-8 gap-4">
+                        <div>
+                            <div class="flex items-center gap-3 mb-2">
+                                <span class="text-[10px] font-bold text-blue-400 uppercase tracking-widest">Research Internship</span>
+                                <span class="bg-blue-500/10 border border-blue-500/30 px-3 py-1 rounded text-blue-400 text-[10px] font-bold uppercase tracking-tighter animate-pulse">
+                                    <i class="fas fa-trophy mr-1"></i> AIR 4
+                                </span>
+                            </div>
+                            <h3 class="text-2xl font-bold">Space Lab Technical Intern</h3>
+                            <p class="text-slate-400 text-sm italic">India Space Lab | Dec 2024 - Jan 2025</p>
+                        </div>
+
+                        <div class="opacity-40 group-hover:opacity-100 transition-opacity">
+                            <i class="fas fa-satellite text-blue-500 text-2xl"></i>
+                        </div>
+                    </div>
+
+                    <div class="grid md:grid-cols-2 gap-8">
+                        <div>
+                            <h4 class="text-blue-400 font-bold mb-3 uppercase text-[10px] tracking-widest">
+                                <i class="fas fa-microchip mr-2"></i>Technical Core
+                            </h4>
+                            <ul class="text-xs text-slate-300 space-y-3 border-l border-slate-700 pl-4">
+                                <li>Advanced Drone Technology & Autonomous Systems</li>
+                                <li>CanSat & CubeSat Satellite Programs</li>
+                                <li>Telemetry and Space Science Modules</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h4 class="text-blue-400 font-bold mb-3 uppercase text-[10px] tracking-widest">
+                                <i class="fas fa-award mr-2"></i>Key Highlight
+                            </h4>
+                            <p class="text-xs text-slate-300 leading-relaxed pl-4 border-l border-slate-700">
+                                Selected through a highly competitive national process, securing
+                                <strong class="text-white">All India Rank 4</strong>. Engaged in
+                                collaborative training frameworks involving Space Science and
+                                Entrepreneurship.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
