--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="container mx-auto">
             <div class="mb-12">
                 <h2 class="text-3xl font-bold mb-2 text-left uppercase tracking-widest">
-                    Professional Journey
+                    Professional Experience
                 </h2>
                 <p class="text-slate-500 text-xs uppercase tracking-widest opacity-80">
                     Internships and National Achievements
