--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h2 class="text-blue-400 font-semibold tracking-widest uppercase text-sm mb-1">Hello World!!</h2>
                     <h2 class="text-blue-400 font-semibold tracking-widest uppercase text-sm">I'm</h2>
                 </div>
-                <h1 class="text-5xl md:text-7xl font-bold leading-tight">Bhaskar <span class="text-blue-500">Chari</span></h1>
+                <h1 class="text-5xl md:text-7xl font-bold leading-tight">Bhaskar Chari</h1>
 
                 <div class="border-l-4 border-blue-600 pl-6 space-y-2">
                     <p class="text-xl font-semibold text-slate-300">AI & Machine Learning Developer</p>
