updated index file

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
                     <div class="glass-card p-6 rounded-2xl border-l-2 border-blue-500/50">
                         <h4 class="text-blue-400 font-bold uppercase text-[10px] tracking-widest mb-5 flex items-center gap-2"><i class="fas fa-cubes"></i> Libraries & Frameworks</h4>
-                        <div class="flex flex-wrap gap-2"><span class="skill-chip">TensorFlow</span><span class="skill-chip">PyTorch</span><span class="skill-chip">Scikit-learn</span><span class="skill-chip">Pandas</span><span class="skill-chip">NumPy</span><span class="skill-chip">Matplotlib</span><span class="skill-chip">MediaPipe</span><span class="skill-chip">PyQt5</span><span class="skill-chip">CatBoost</span></div>
+                        <div class="flex flex-wrap gap-2"><span class="skill-chip">TensorFlow</span><span class="skill-chip">PyTorch</span><span class="skill-chip">Scikit-learn</span><span class="skill-chip">Pandas</span><span class="skill-chip">NumPy</span><span class="skill-chip">Matplotlib</span><span class="skill-chip">MediaPipe</span><span class="skill-chip">PyQt5</span><span class="skill-chip">FIASS</span><span class="skill-chip">CatBoost</span></div>
                     </div>
                     <div class="glass-card p-6 rounded-2xl border-l-2 border-cyan-500/50">
                         <h4 class="text-cyan-400 font-bold uppercase text-[10px] tracking-widest mb-5 flex items-center gap-2"><i class="fas fa-microchip"></i> Core Concepts</h4>
@@ -312,15 +312,15 @@
                     <div class="card-front glass-card p-8 flex flex-col justify-between relative overflow-hidden group">
                         <div>
                             <div class="flex justify-between items-start mb-6">
-                                <span class="text-[10px] font-bold text-yellow-400 uppercase tracking-widest">Financial ML / Time Series</span>
-                                <a href="https://github.com/DeadBoTt-exe/STOCK-MARKET-ANALYSIS-Using-Machine-learning.git" target="_blank" onclick="event.stopPropagation()" class="hover:text-blue-400 transition"><i class="fab fa-github text-xl"></i></a>
+                                <span class="text-[10px] font-bold text-yellow-400 uppercase tracking-widest">GenAI / RAG</span>
+                                <a href="https://github.com/DeadBoTt-exe/DocuMind-AI.git" target="_blank" onclick="event.stopPropagation()" class="hover:text-blue-400 transition"><i class="fab fa-github text-xl"></i></a>
                             </div>
-                            <h3 class="text-2xl font-bold mb-4">MarketPulse AI</h3>
-                            <p class="text-slate-400 text-sm leading-relaxed text-justify">Predicting stock market trends by processing historical financial data to identify patterns and price movements using quantitative time-series models.</p>
+                            <h3 class="text-2xl font-bold mb-4">DocuMind AI</h3>
+                            <p class="text-slate-400 text-sm leading-relaxed text-justify"> A production style RAG system that enables semantic search and grounded Q&A over engineering documentation using vector retrieval and Gemini-powered generation.</p>
                         </div>
                         <div class="flex flex-wrap gap-2">
-                            <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Scikit-Learn</span>
-                            <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Pandas</span>
+                            <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">FIASS</span>
+                            <span class="text-[10px] bg-slate-800 px-2 py-1 rounded">Gemini</span>
                         </div>
                         <div class="absolute bottom-5 right-5 opacity-0 group-hover:opacity-100 transition-all duration-300 transform translate-y-2 group-hover:translate-y-0">
                             <i class="fas fa-external-link-alt text-yellow-500 text-lg"></i>
@@ -329,14 +329,14 @@
                     <div class="card-back p-8 flex flex-col justify-center border-yellow-500/50">
                         <h4 class="text-yellow-400 font-bold mb-3 uppercase text-[10px] tracking-widest"><i class="fas fa-microchip mr-2"></i>What I worked on</h4>
                         <ul class="text-xs text-slate-300 space-y-2 mb-6 border-l border-slate-700 pl-4">
-                            <li class="flex gap-2"><span>•</span><span>Collected and cleaned historical stock market data.</span></li>
-                            <li class="flex gap-2"><span>•</span><span>Engineered features from financial time-series signals.</span></li>
-                            <li class="flex gap-2"><span>•</span><span>Integrated Matplotlib for real-time trend visualization.</span></li>
+                            <li class="flex gap-2"><span>•</span><span>Document chunking along with metadata.</span></li>
+                            <li class="flex gap-2"><span>•</span><span>Semantic embeddings and FAISS vector search.</span></li>
+                            <li class="flex gap-2"><span>•</span><span>Retrieval-grounded answer generation using Gemini.</span></li>
                         </ul>
                         <h4 class="text-yellow-400 font-bold mb-3 uppercase text-[10px] tracking-widest"><i class="fas fa-lightbulb mr-2"></i>Why it matters</h4>
                         <ul class="text-xs text-slate-300 space-y-2 mb-6 border-l border-slate-700 pl-4">
-                            <li class="flex gap-2"><span>•</span><span>Enables data-driven analysis of financial assets.</span></li>
-                            <li class="flex gap-2"><span>•</span><span>Demonstrates applied ML in quantitative finance.</span></li>
+                            <li class="flex gap-2"><span>•</span><span>Prevents hallucinations via retrieval grounding.</span></li>
+                            <li class="flex gap-2"><span>•</span><span>Demonstrates real-world GenAI system design.</span></li>
                         </ul>
                         <span class="text-[10px] text-yellow-500 font-bold uppercase tracking-widest italic animate-pulse text-center">Click to flip back</span>
                     </div>
